# HyCoRec

./: README.md  pyproject.toml  requirements.txt
Contrast/: dataset.py  model.py
HyCoRec/: README.md  run_crslab.py  run_edger.py
HyCoRec/config/crs/hycorec/: durecdial.yaml  opendialkg.yaml  redial.yaml  tgredial.yaml
HyCoRec/config/crs/mhim/: hredial.yaml  htgredial.yaml
HyCoRec/crslab/: download.py
HyCoRec/crslab/config/: __init__.py  config.py
HyCoRec/crslab/data/: __init__.py
HyCoRec/crslab/data/dataloader/: __init__.py  base.py  hycorec.py  utils.py
HyCoRec/crslab/data/dataset/: __init__.py  base.py
HyCoRec/crslab/data/dataset/durecdial/: __init__.py  durecdial.py  resources.py
HyCoRec/crslab/data/dataset/hredial/: hredial.py  resources.py
HyCoRec/crslab/data/dataset/htgredial/: __init__.py  htgredial.py  resources.py
HyCoRec/crslab/data/dataset/opendialkg/: __init__.py  opendialkg.py  resources.py
HyCoRec/crslab/data/dataset/redial/: __init__.py  redial.py  resources.py
HyCoRec/crslab/evaluator/: __init__.py  base.py  embeddings.py  standard.py  utils.py
HyCoRec/crslab/evaluator/metrics/: __init__.py  base.py  gen.py  rec.py
HyCoRec/crslab/model/: __init__.py  base.py  pretrained_models.py
HyCoRec/crslab/model/crs/: __init__.py
HyCoRec/crslab/model/utils/: functions.py
HyCoRec/crslab/quick_start/: __init__.py  quick_start.py
HyCoRec/crslab/system/: __init__.py  base.py  hycorec.py
HyCoRec/crslab/system/utils/: functions.py  lr_scheduler.py
HyCoRec/edger/: __init__.py  durecdial.py  opendialkg.py  redial.py  tgredial.py
(+9 files in other folders)
